@@ -361,6 +361,8 @@ Extensions
 Tests
 -----
 
+- Issue #11727: add --timeout option to regrtest (disabled by default).
+
 - Issue #11653: fix -W with -j in regrtest.
 
 - The email test suite now lives in the Lib/test/test_email package.  The test
